--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
 						
 						<div class="row slider-services">
 							<div class="span8">
-								<img src="img/building-blocks.png" alt="">
+								<img src="img/customer-ecosystem.png" alt="">
 							</div>
 							<div class="span4">
 								<!-- Start Services List -->
