fixed siggis descr

--- a/index.html
+++ b/index.html
@@ -174,10 +174,10 @@
 						<div class="span3 profile">
 							<img src="img/team/profile1.jpg" alt="">
 							<div class="profile-name">Siegfried Schüle</div>
-							<div class="profile-job">Geschäftsführer & Tech Director</div>
+							<div class="profile-job">Geschäftsführer</div>
 							<div class="profile-desc">
 								<p>Siegfried war lange Jahre Leiter Operations bei einem führenden internationalen Onsite-Conversion Technologie-Unternehmen mit mehr als 1000 Kunden im europäischen eCommerce Markt. Zuletzt war er mit seiner (cgi)² als unabhängiger eCommerce Berater für zahlreiche Retailer tätig.</br>
-Als Geschäftsführer und Technical Director bei Commerce Experts verantwortet er... .</p>
+Als Geschäftsführer bei Commerce Experts verantwortet er den Bereich eCommerce Consulting.</p>
 							</div>
 							<ul class="profile-social-icons">
 								<li><a href="https://www.xing.com/profile/Siegfried_Schuele"><span class="socicon">l</span></a></li>
