added footer links

--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@
 					<div class="row">
 						<!-- Start Profile -->
 						<div class="span3 profile">
-							<img src="img/team/profile1.jpg" alt="">
+							<!-- <img src="img/team/profile1.jpg" alt=""> -->
 							<div class="profile-name">Siegfried Schüle</div>
 							<div class="profile-job">Geschäftsführer</div>
 							<div class="profile-desc">
@@ -187,7 +187,7 @@ Als Geschäftsführer bei Commerce Experts verantwortet er den Bereich eCommerce
 						
 						<!-- Start Profile -->
 						<div class="span3 profile">
-							<img src="img/team/profile2.jpg" alt="">
+							<!-- <img src="img/team/profile2.jpg" alt=""> -->
 							<div class="profile-name">Mathias Duda</div>
 							<div class="profile-job">Geschäftsführer & Sales Director</div>
 							<div class="profile-desc">
@@ -204,7 +204,7 @@ Als Geschäftsführer und Sales Director bei Commerce Experts verantwortet er de
 						
 						<!-- Start Profile -->
 						<div class="span3 profile">
-							<img src="img/team/profile3.jpg" alt="">
+							<!-- <img src="img/team/profile3.jpg" alt=""> -->
 							<div class="profile-name">Andreas Wagner</div>
 							<div class="profile-job">Geschäftsführer & Data Scientist</div>
 							<div class="profile-desc">
@@ -376,7 +376,7 @@ Als Geschäftsführer und Data Scientist bei Commerce Experts verantwortet er da
 								<span class="profile-icons">&#0117;</span><h6> Standort</h6>
 								<p>Apartment 3 - Schulerstrasse 2 - 75180 Pforzheim</p>
 								<span class="profile-icons">&#0056;</span><h6> E-mail</h5><p>info[at]commerce-experts.com<br /> </p>
-                                <span class="profile-icons">&#0124;</span><h6> Telefon</h6><p>+49 (0)7232 1661401</p>
+                                <span class="profile-icons">&#0124;</span><h6> Telefon</h6><p>+49 (0)7231 1661401</p>
 							</div>
 						</div>
 					</div>
@@ -430,12 +430,20 @@ Als Geschäftsführer und Data Scientist bei Commerce Experts verantwortet er da
 					<div class="span4">
 						<h5>Kontakt</h5>
 						<p><strong>E-mail:</strong> <span class="white-text">info[at]commerce-experts.com</span><br />
-						<strong>Telefon:</strong> <span class="white-text">+49 (0)7232 1661401</span><br />
+						<strong>Telefon:</strong> <span class="white-text">+49 (0)7231 1661401</span><br />
 						<strong>Standort:</strong> <span class="white-text">Apartment 3 - Schulerstrasse 2 - 75180 Pforzheim</span></p>
 					</div>
 					<div class="span4">
 						<h5>Über Commerce Experts</h5>
 						<p>Technologische Perfektion ist das Rückgrat einer erfolgreichen E-Business Lösung. Darum beherrschen wir alle führenden Software-Lösungen und passen diese exakt auf die Bedürfnisse unserer Kunden an.</p>
+					</div>
+                    <div class="span4">
+						<h5>Links</h5>
+						<ul>
+                            <li><a href="#">Impressum</li>
+                            <li><a href="#">Haftungsausschlss</li>
+                            <li><a href="#">Datenschutz</li>
+                        </ul>
 					</div>
 				</div>
 			</div>
