added footer links

--- a/index.html
+++ b/index.html
@@ -439,10 +439,11 @@ Als Geschäftsführer und Data Scientist bei Commerce Experts verantwortet er da
 					</div>
                     <div class="span4">
 						<h5>Links</h5>
-						<ul>
-                            <li><a href="#">Impressum</li>
-                            <li><a href="#">Haftungsausschlss</li>
-                            <li><a href="#">Datenschutz</li>
+                        <ul style="list-style-type:none">
+                            <li><a href="impressum.html" class="trigger" >Impressum</li>
+                                
+                            <li><a href="haftungsausschluss.html" class="trigger">Haftungsausschluss</li>
+                            <li><a href="datenschutz" class="trigger">Datenschutz</li>
                         </ul>
 					</div>
 				</div>
@@ -450,7 +451,7 @@ Als Geschäftsführer und Data Scientist bei Commerce Experts verantwortet er da
 		</section>
 		<!-- End Sidebar -->
 		<section id="copyright">
-			© 2014</br>Commerce Experts UG (haftungsbeschränkt) 
+			© 2014</br>Commerce Experts UG (haftungsbeschränkt) i. Gr.
 		</section>
 	</div>
     <!-- End Wrapper for Content -->
