fixed some footer link stuff

--- a/index.html
+++ b/index.html
@@ -440,7 +440,8 @@ Als Geschäftsführer und Data Scientist bei Commerce Experts verantwortet er da
                     <div class="span4">
 						<h5>Links</h5>
                         <ul style="list-style-type:none">
-                            <li><a href="impressum.html" class="trigger" >Impressum</li>
+                            <li><a href="index.html" class="trigger" >Startseite</li>
+                            <li><a href="impressum.html" class="trigger">Impressum</li>
                                 
                             <li><a href="haftungsausschluss.html" class="trigger">Haftungsausschluss</li>
                             <li><a href="datenschutz" class="trigger">Datenschutz</li>
