--- a/impressum.html
+++ b/impressum.html
@@ -79,7 +79,8 @@ Betriebshaftpflichtversicherung: HISCOX Insurance Company Ltd., Niederlassung f√
                     <div class="span4">
 						<h5>Links</h5>
                         <ul style="list-style-type:none">
-                            <li><a href="impressum.html" class="trigger" >Impressum</li>
+                            <li><a href="index.html" class="trigger" >Startseite</li>
+                            <li><a href="impressum.html" class="trigger">Impressum</li>
                                 
                             <li><a href="haftungsausschluss.html" class="trigger">Haftungsausschluss</li>
                             <li><a href="datenschutz" class="trigger">Datenschutz</li>
