--- a/impressum.html
+++ b/impressum.html
@@ -52,8 +52,8 @@
 <p>Umsatzsteueridentifikationsnummer nach §27a Umsatzsteuergesetz:
 </br>DE xxxxxxxx xx</p>
 
-<p>Angabe gemäß § 2 Abs. 1 Nr. 11 der Verordnung über Informationspflichten für Dienstleistungserbringer (DL-InfoV):</br>
-Betriebshaftpflichtversicherung: HISCOX Insurance Company Ltd., Niederlassung für die Bundesrepublik Deutschland, Oberanger 28, 80331 München; räumlicher Geltungsbereich der Betriebshaftpflichtversicherung: Es besteht weltweiter Versicherungsschutz, allerdings mit der Einschränkung, dass für Ansprüche, die vor den Gerichten der USA oder Kanadas geltend gemacht werden oder auf der Verletzung des Rechts dieser Staaten beruhen, nur für Vermögensschäden Versicherungsschutz besteht.</p>					
+<!-- <p>Angabe gemäß § 2 Abs. 1 Nr. 11 der Verordnung über Informationspflichten für Dienstleistungserbringer (DL-InfoV):</br>
+Betriebshaftpflichtversicherung: HISCOX Insurance Company Ltd., Niederlassung für die Bundesrepublik Deutschland, Oberanger 28, 80331 München; räumlicher Geltungsbereich der Betriebshaftpflichtversicherung: Es besteht weltweiter Versicherungsschutz, allerdings mit der Einschränkung, dass für Ansprüche, die vor den Gerichten der USA oder Kanadas geltend gemacht werden oder auf der Verletzung des Rechts dieser Staaten beruhen, nur für Vermögensschäden Versicherungsschutz besteht.</p> -->					
 					</div>
 				</div>
 			</div>
