edited telephone number format

--- a/index.html
+++ b/index.html
@@ -376,7 +376,7 @@ Als Geschäftsführer und Data Scientist bei Commerce Experts verantwortet er da
 								<span class="profile-icons">&#0117;</span><h6> Standort</h6>
 								<p>Apartment 3 - Schulerstrasse 2 - 75180 Pforzheim</p>
 								<span class="profile-icons">&#0056;</span><h6> E-mail</h5><p>info[at]commerce-experts.com<br /> </p>
-                                <span class="profile-icons">&#0124;</span><h6> Telefon</h6><p>+49 (0)7231 1661401</p>
+                                <span class="profile-icons">&#0124;</span><h6> Telefon</h6><p>+49 7231 16 61 40-1</p>
 							</div>
 						</div>
 					</div>
@@ -430,7 +430,7 @@ Als Geschäftsführer und Data Scientist bei Commerce Experts verantwortet er da
 					<div class="span4">
 						<h5>Kontakt</h5>
 						<p><strong>E-mail:</strong> <span class="white-text">info[at]commerce-experts.com</span><br />
-						<strong>Telefon:</strong> <span class="white-text">+49 (0)7231 1661401</span><br />
+						<strong>Telefon:</strong> <span class="white-text">+49 7231 16 61 40-1</span><br />
 						<strong>Standort:</strong> <span class="white-text">Apartment 3 - Schulerstrasse 2 - 75180 Pforzheim</span></p>
 					</div>
 					<div class="span4">
