fixed telephone format

--- a/haftungsausschluss.html
+++ b/haftungsausschluss.html
@@ -55,7 +55,7 @@
 					<div class="span4">
 						<h5>Kontakt</h5>
 						<p><strong>E-mail:</strong> <span class="white-text">info[at]commerce-experts.com</span><br />
-						<strong>Telefon:</strong> <span class="white-text">+49 (0)7231 1661401</span><br />
+						<strong>Telefon:</strong> <span class="white-text">+49 7231 16 61 40-1</span><br />
 						<strong>Standort:</strong> <span class="white-text">Apartment 3 - Schulerstrasse 2 - 75180 Pforzheim</span></p>
 					</div>
 					<div class="span4">
