--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 				<div class="span12">
 					<div id="slidecaption">
 						Ihre <span class="color-text">Experten</span> für den<span class="color-text"> digitalen Handel</span>
-						<div class="sub-caption">Wir ebnen Wege für unsere Kunden & Partner beim Einstieg, bei der Optimierung und während der Wachstumsphase im ditigalen Handel.</div>
+						<div class="sub-caption">Wir ebnen Wege für unsere Kunden & Partner beim Einstieg, bei der Optimierung und während der Wachstumsphase im digitalen Handel.</div>
 						<a href="#about" class="btn white scroll-link">Erfahren Sie mehr</a>
 					</div>
 				</div>
@@ -131,7 +131,7 @@
 							</div>
 							<div class="span3">
 								<h5>Application Management</h5>
-								<p>Konzentrieren Sie sich auf die maßgeblichen Treiber Ihres Unternehmens und wir verantworten die Applikationen. Hardware als auch ihre Risiken sind unsere Kernkompetenzen. Wir minimieren das Risiko durch garantierte Verfügbarkeiten, Sie entscheiden die Höhe Ihres Service Levels und Ihre Admins kommunizieren mit unserem Supportteam.</p>
+								<p>Konzentrieren Sie sich auf die maßgeblichen Treiber Ihres Unternehmens und wir verantworten die Applikationen. Hardware als auch Ihre Risiken sind unsere Kernkompetenzen. Wir minimieren das Risiko durch garantierte Verfügbarkeiten, Sie entscheiden die Höhe Ihres Service Levels und Ihre Admins kommunizieren mit unserem Supportteam.</p>
 								<hr class="gray margin20 visible-phone">
 							</div>
 							<div class="span3">
@@ -153,7 +153,7 @@
 				<div class="row">
 					<div class="span12">
 						<div class="vertical-text">
-							<div class="parallax-title">Mit viel Gespür für die Bedürfnisse unserer Kunden sowie einem ganzheitlichen Ansatz aus Consulting, Technologie und Application Management bieten wir, E-Business-Projekte </br><a class="scroll-link" href="#projects">die begeistern</a></div>
+							<div class="parallax-title">Mit viel Gespür für die Bedürfnisse unserer Kunden sowie einem ganzheitlichen Ansatz aus Consulting, Technologie und Application Management bieten wir E-Business-Projekte </br><a class="scroll-link" href="#projects">die begeistern</a></div>
 						</div>
 					</div>
 				</div>
@@ -191,8 +191,8 @@ Als Geschäftsführer bei Commerce Experts verantwortet er den Bereich eCommerce
 							<div class="profile-name">Mathias Duda</div>
 							<div class="profile-job">Geschäftsführer & Sales Director</div>
 							<div class="profile-desc">
-								<p>Mathias war zuletzt Vertriebsleiter bei einem führenden internationalen Onsite-Conversion Technologie-Unternehmen und bereute mit seinem Team mehr als 1000 Kunden & Partner im europäischen eCommerce Markt. </br>
-Als Geschäftsführer und Sales Director bei Commerce Experts verantwortet er den strategischen Vertrieb sowie die das Partnermangement.</p>
+								<p>Mathias war zuletzt Vertriebsleiter bei einem führenden internationalen Onsite-Conversion Technologie-Unternehmen und betreute mit seinem Team mehr als 1000 Kunden & Partner im europäischen eCommerce Markt. </br>
+Als Geschäftsführer und Sales Director bei Commerce Experts verantwortet er den strategischen Vertrieb sowie das Partnermangement.</p>
 							</div>
 							<ul class="profile-social-icons">
 								<li><a href="https://www.xing.com/profile/Mathias_Duda"><span class="socicon">l</span></a></li>
@@ -208,7 +208,7 @@ Als Geschäftsführer und Sales Director bei Commerce Experts verantwortet er de
 							<div class="profile-name">Andreas Wagner</div>
 							<div class="profile-job">Geschäftsführer & Data Scientist</div>
 							<div class="profile-desc">
-								<p>Andreas war zuletzt Leiter Produktmanagement bei einem führenden internationalen Onsite-Conversion Technologie-Unternehmen mit mehr als 1000 Kunden & Partner im eurpäischen eCommerde Markt. </br>
+								<p>Andreas war zuletzt Leiter Produktmanagement bei einem führenden internationalen Onsite-Conversion Technologie-Unternehmen mit mehr als 1000 Kunden & Partner im europäischen eCommerde Markt. </br>
 Als Geschäftsführer und Data Scientist bei Commerce Experts verantwortet er das Business Development und betreut sämtliche Big Data Projekte.</p>
 							</div>
 							<ul class="profile-social-icons">
