--- a/index.html
+++ b/index.html
@@ -208,7 +208,7 @@ Als Geschäftsführer und Sales Director bei Commerce Experts verantwortet er de
 							<div class="profile-name">Andreas Wagner</div>
 							<div class="profile-job">Geschäftsführer & Data Scientist</div>
 							<div class="profile-desc">
-								<p>Andreas war zuletzt Leiter Produktmanagement bei einem führenden internationalen Onsite-Conversion Technologie-Unternehmen mit mehr als 1000 Kunden & Partner im europäischen eCommerde Markt. </br>
+								<p>Andreas war zuletzt Leiter Produktmanagement bei einem führenden internationalen Onsite-Conversion Technologie-Unternehmen mit mehr als 1000 Kunden & Partnern im europäischen eCommerde Markt. </br>
 Als Geschäftsführer und Data Scientist bei Commerce Experts verantwortet er das Business Development und betreut sämtliche Big Data Projekte.</p>
 							</div>
 							<ul class="profile-social-icons">
