changed technology points

--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
 									</ul>
                                     <div class="services-title hidden-tablet">Technologien</div>
 									<ul class="services-list">
-										<li>Onsite Search & Navigation</li>
+										<li>BI & Analytics</li>
                                         <li>Big Data & Personalisierung</li>
 										<li>Infrastruktur & Hosting</li>
 									</ul>
