--- a/index.html
+++ b/index.html
@@ -110,9 +110,9 @@
 									</ul>
                                     <div class="services-title hidden-tablet">Technologien</div>
 									<ul class="services-list">
-										<li>Big Data & Personalisierung</li>
 										<li>Infrastruktur & Hosting</li>
-                                        <li>BI & Analytics</li>
+                                        <li>Big Data & Analytics</li>
+                                        <li>Personalisierung</li>
 									</ul>
 								</div>
 								<!-- End Services List -->
