minor changes at impressum and datenschutz

--- a/impressum.html
+++ b/impressum.html
@@ -46,7 +46,7 @@
 </br>Siegfried Schüle, Mathias Duda, Andreas Wagner</p>
 
 <p>Handelsregister:
-</br>Amtsgericht Stuttgart
+</br>Amtsgericht Mannheim
 </br>HRB xxxxx</p>
 
 <p>Umsatzsteueridentifikationsnummer nach §27a Umsatzsteuergesetz:
