fixed main logo link

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 			<div class="container">
 				<div class="row">
 					<div class="span4">
-						<a href="index-2.html" class="logo"><img src="img/CXP_Logo_w.png" alt=""></a>
+						<a href="#home" class="logo"><img src="img/CXP_Logo_w.png" alt=""></a>
 					</div>
 					<div class="span8">
 						<ul id="fluid-nav" class="fluid-navigation visible-desktop">
