--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 		<div class="container">
 			<div class="row">
 				<div class="span4">
-					<a href="index-2.html" class="logo"><img src="img/CXP_Logo_w.png" alt=""></a>
+					<a href="#home" class="logo"><img src="img/CXP_Logo_w.png" alt=""></a>
 				</div>
 				<!-- Navigation -->
 				<nav id="topnav" class="span8">
