added guided selling

--- a/index.html
+++ b/index.html
@@ -109,10 +109,10 @@
 										
 									</ul>
                                     <div class="services-title hidden-tablet">Technologien</div>
-									<ul class="services-list">
-										<li>Infrastruktur & Hosting</li>
+									<ul class="services-list">										
+                                        <li>Guided Selling & Personalisierung</li>
+                                        <li>Infrastruktur & Hosting</li>
                                         <li>Big Data & Analytics</li>
-                                        <li>Personalisierung</li>
 									</ul>
 								</div>
 								<!-- End Services List -->
