changed subcaption and focus area

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 	<meta charset="utf-8" />
-	<title>Commerce Experts</title>
+	<title>Commerce Experts UG</title>
 	<meta name="description" content="Experten für den digitalen Handel / eCommerce.">
 	<meta name="author" content="Commerce Experts UG (haftungsbeschränkt)">
     <meta name="keywords" content="Multichannel, E-Commerce, Crosschannel, Omnichannel, Multichannel Business, Beratung, Product Information Management, PIM, On-Site Search"/>
@@ -91,7 +91,9 @@
 				<div class="row">
 					<div class="span12">
 						<div class="title"><span class="color-text">COMMERCE </span>EXPERTS</div>
-                        <div class="sub-caption"><h5>Wir stehen für qualitativ hochwertige Projekte mit hohem Investitionsschutz </br>für Ihren unternehmerischen Erfolg im digitalen Handel.</h5></div><p></p>
+                        <div class="sub-caption"><h5>Wir stehen für qualitativ hochwertige Projekte mit hohem Investitionsschutz </br>für Ihren unternehmerischen Erfolg im digitalen Handel.</h5>
+                        <p>Ein wesentliches Merkmal unserer Projekte ist die zentrale & integrierte Erfassung von Datenströmen aus verschiedenen Quellen.</br> Erfolgreiche Projekte im digitalen Handel zeichnen sich durch stabile und performante Prozesse, kanalübergreifende Datenstrukturen und eine hervoragende User Experience aus. Grundlage bilden eine Vielzahl an Datenpunkten, die gebündelt und aufbereitet werden müssen, um die Optimierung der Kundenansprache sowie personalisierte Marketingmaßnahmen zu ermöglichen.</br> Für den erforderlichen Datenaustausch zwischen den Systemen entwickelt und supportet Commerce Experts mit seinem Datahub Schnittstellen zu den führenden Systemen im Markt und schafft so nachhaltig und unabhängig einen nachweislichen Mehrwert für Kunden und Partner.</p>
+                        </div><p></p>
 						
 						<div class="row slider-services">
 							<div class="span8">
@@ -120,8 +122,8 @@
 						</div>
 						<div class="row">
 							<div class="span3">
-								<h5>Onsite Search & Navigation</h5>
-								<p>Sie suchen die perfekte Onsite-Search Lösung? Sie benötigen Unterstützung bei der Integration und Feinjustierung von FACT-Finder, Apache Solr oder Elasticsearch? Commerce Experts berät Sie auf höchstem Niveau bei allen Fragen rund um die Themen Suche und Navigation im Online Shop. Wir garantieren einzigartiges Expertenwissen rund um Europas führende Ecommerce Suchlösungen.</p>
+								<h5>Data Driven Commerce</h5>
+								<p>Ein integriertes, datengetriebenes Commerce OS ist die Voraussetzung für eine zielorientierte und kanalübergreifende Kundenansprache. Wir helfen Ihnen dabei Ihre Systeme ERP, Onsite Search & Navigation, Analytics, Guided Selling, Recommendation & Personalisierung mittels unseres eigens entwickleten Datahubs zu verbinden und sie integriert zu nutzen.</p>
 								<hr class="gray margin20 visible-phone">
 							</div>
 							<div class="span3">
