--- a/index.html
+++ b/index.html
@@ -437,7 +437,7 @@ Als Geschäftsführer und Data Scientist bei Commerce Experts verantwortet er da
 					</div>
 					<div class="span4">
 						<h5>Über Commerce Experts</h5>
-						<p>Technologische Perfektion ist das Rückgrat einer erfolgreichen E-Business Lösung. Darum beherrschen wir alle führenden Software-Lösungen und passen diese exakt auf die Bedürfnisse unserer Kunden an.</p>
+						<p>Technologische Perfektion und datengetriebene Entscheidungen sind das Rückgrat einer erfolgreichen E-Business Lösung. Darum beherrschen wir alle führenden Software-Lösungen und passen diese exakt auf die Bedürfnisse unserer Kunden an.</p>
 					</div>
                     <div class="span4">
 						<h5>Links</h5>
