changed some UI stuff

--- a/datenschutz.html
+++ b/datenschutz.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-	<meta charset="utf-8" />
+	<meta charset="utf-8">
 	<title>Datenschutz | Commerce Experts</title>
 	<meta name="description" content="Experten für den digitalen Handel / eCommerce.">
 	<meta name="author" content="Commerce Experts UG (haftungsbeschränkt)">
