--- a/impressum.html
+++ b/impressum.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-	<meta charset="utf-8" />
+	<meta charset="utf-8">
 	<title>Impressum | Commerce Experts</title>
 	<meta name="description" content="Experten für den digitalen Handel / eCommerce.">
 	<meta name="author" content="Commerce Experts UG (haftungsbeschränkt)">
@@ -35,7 +35,7 @@
 						<div class="title"><span class="color-text">IMPRESSUM</span></div>
                         <div class="sub-caption"><h5>Commerce Experts UG (haftungsbeschränkt) i. Gr.</h5></div>
                         
-<p>Internetagentur & Systemhaus
+<p>Software- & Systemhaus
 </br>Schulerstrasse 2
 </br>75180 Pforzheim - Germany</p>
 
