--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-	<meta charset="utf-8" />
+	<meta charset="utf-8">
 	<title>Commerce Experts UG</title>
 	<meta name="description" content="Experten für den digitalen Handel / eCommerce.">
 	<meta name="author" content="Commerce Experts UG (haftungsbeschränkt)">
@@ -92,7 +92,7 @@
 					<div class="span12">
 						<div class="title"><span class="color-text">COMMERCE </span>EXPERTS</div>
                         <div class="sub-caption"><h5>Wir stehen für qualitativ hochwertige Projekte mit hohem Investitionsschutz </br>für Ihren unternehmerischen Erfolg im digitalen Handel.</h5>
-                        <p>Ein wesentliches Merkmal unserer Projekte ist die zentrale & integrierte Erfassung von Datenströmen aus verschiedenen Quellen.</br> Erfolgreiche Projekte im digitalen Handel zeichnen sich durch stabile und performante Prozesse, kanalübergreifende Datenstrukturen und eine hervoragende User Experience aus. Grundlage bilden eine Vielzahl an Datenpunkten, die gebündelt und aufbereitet werden müssen, um die Optimierung der Kundenansprache sowie personalisierte Marketingmaßnahmen zu ermöglichen.</br> Für den erforderlichen Datenaustausch zwischen den Systemen entwickelt und supportet Commerce Experts mit seinem Datahub Schnittstellen zu den führenden Systemen im Markt und schafft so nachhaltig und unabhängig einen nachweislichen Mehrwert für Kunden und Partner.</p>
+                        <p>Ein wesentliches Merkmal unserer Projekte ist die zentrale & integrierte Erfassung von Datenströmen aus verschiedenen Quellen.</br> Erfolgreiche Projekte im digitalen Handel zeichnen sich durch stabile und performante Prozesse, kanalübergreifende Datenstrukturen und eine hervorragende User Experience aus. Grundlage bilden eine Vielzahl an Datenpunkten, die gebündelt und aufbereitet werden müssen, um die Optimierung der Kundenansprache sowie personalisierte Marketingmaßnahmen zu ermöglichen.</br> Für den erforderlichen Datenaustausch zwischen den Systemen entwickelt und supportet Commerce Experts mit seinem Datahub, Schnittstellen zu den führenden Systemen im Markt und schafft so nachhaltig und unabhängig einen nachweislichen Mehrwert für Kunden und Partner.</p>
                         </div><p></p>
 						
 						<div class="row slider-services">
@@ -155,7 +155,7 @@
 				<div class="row">
 					<div class="span12">
 						<div class="vertical-text">
-							<div class="parallax-title">Mit viel Gespür für die Bedürfnisse unserer Kunden sowie einem ganzheitlichen Ansatz aus Consulting, Technologie und Application Management bieten wir E-Business-Projekte </br><a class="scroll-link" href="#projects">die begeistern</a></div>
+							<div class="parallax-title">Mit viel Gespür für die Bedürfnisse unserer Kunden sowie einem ganzheitlichen Ansatz aus Consulting, Technologie und Application Management arbeiten wir an E-Business-Projekten </br><a class="scroll-link" href="#projects">die begeistern</a></div>
 						</div>
 					</div>
 				</div>
