made W3 comliant changes

--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
 	<meta name="author" content="Commerce Experts UG (haftungsbeschränkt)">
     <meta name="keywords" content="Multichannel, E-Commerce, Crosschannel, Omnichannel, Multichannel Business, Beratung, Product Information Management, PIM, On-Site Search"/>
 	<meta name="HandheldFriendly" content="true"/>
-	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"/>
+	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1"/>
-	<link href='https://fonts.googleapis.com/css?family=Montserrat:400,700|Open+Sans:400,300,700' rel='stylesheet' type='text/css'/>	
+	<link href='https://fonts.googleapis.com/css?family=Montserrat:400,700%7COpen+Sans:400,300,700' rel='stylesheet' type='text/css'/>	
 	<!-- Import CSS -->
 	<link rel="stylesheet" href="css/base.css" />
 	<!--[if lt IE 10]>
@@ -155,8 +155,10 @@
 				<div class="row">
 					<div class="span12">
 						<div class="vertical-text">
-							<div class="parallax-title">Mit viel Gespür für die Bedürfnisse unserer Kunden sowie einem ganzheitlichen Ansatz aus Consulting, Technologie und Application Management arbeiten wir an E-Business-Projekten <br><a class="scroll-link" href="#projects">die begeistern</a></div>
-						</div>
+							<div class="parallax-title">
+                                <h2>Mit viel Gespür für die Bedürfnisse unserer Kunden sowie einem ganzheitlichen Ansatz aus Consulting, Technologie und Application Management arbeiten wir an E-Business-Projekten die begeistern</h2>
+                            <!-- <br><a class="scroll-link" href="#projects"></a> -->
+                            </div>
 					</div>
 				</div>
 			</div>
@@ -168,7 +170,9 @@
 			<div class="container">
 				<div class="row">
 					<div class="span12">
-					<div class="title">Das <span class="color-text">Team</span> <span class="profile-icons">&#0161;</span></div>
+					<div class="title">
+                        <h2>Das <span class="color-text">Team</span> <span class="profile-icons">&#0161;</span></h2>
+                    </div>
 					<hr>
 					<div class="lead">Gebündelte Expertise aus mehr als 35 Jahren Erfahrung im digitalen Handel.</div>
 					<div class="row">
@@ -244,7 +248,7 @@ Als Geschäftsführer und Data Scientist bei Commerce Experts verantwortet er da
 								<div class="contact-name">Commerce Experts UG (haftungsbeschränkt)</div>
 								<span class="profile-icons">&#0117;</span><h6> Standort</h6>
 								<p>Apartment 3 - Schulerstrasse 2 - 75180 Pforzheim</p>
-								<span class="profile-icons">&#0056;</span><h6> E-mail</h5><p>info[at]commerce-experts.com<br /> </p>
+								<span class="profile-icons">&#0056;</span><h6> E-mail</h6><p>info[at]commerce-experts.com<br></p>
                                 <span class="profile-icons">&#0124;</span><h6> Telefon</h6><p>+49 7231 16 61 40-1</p>
 							</div>
 						</div>
@@ -309,10 +313,10 @@ Als Geschäftsführer und Data Scientist bei Commerce Experts verantwortet er da
                     <div class="span4">
 						<h5>Links</h5>
                         <ul style="list-style-type:none">
-                            <li><a href="index.html" class="trigger">Startseite</li>
-                            <li><a href="impressum.html" class="trigger">Impressum</li>                              
-                            <li><a href="haftungsausschluss.html" class="trigger">Haftungsausschluss</li>
-                            <li><a href="datenschutz" class="trigger">Datenschutz</li>
+                            <li><a href="index.html"><span class="trigger">Startseite</span></a></li>
+                            <li><a href="impressum.html"><span class="trigger">Impressum</span></a></li>                              
+                            <li><a href="haftungsausschluss.html"><span class="trigger">Haftungsausschluss</span></a></li>
+                            <li><a href="datenschutz"><span class="trigger">Datenschutz</span></a></li>
                         </ul>
 					</div>
 				</div>
