--- a/index.html
+++ b/index.html
@@ -6,8 +6,7 @@
 	<meta name="description" content="Experten für den digitalen Handel / eCommerce.">
 	<meta name="author" content="Commerce Experts UG (haftungsbeschränkt)">
     <meta name="keywords" content="Multichannel, E-Commerce, Crosschannel, Omnichannel, Multichannel Business, Beratung, Product Information Management, PIM, On-Site Search"/>
-	<meta name="HandheldFriendly" content="true"/>
-	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+	<meta name="HandheldFriendly" content="true"/>	
 	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1"/>
 	<link href='https://fonts.googleapis.com/css?family=Montserrat:400,700%7COpen+Sans:400,300,700' rel='stylesheet' type='text/css'/>	
 	<!-- Import CSS -->
@@ -157,7 +156,6 @@
 						<div class="vertical-text">
 							<div class="parallax-title">
                                 <h2>Mit viel Gespür für die Bedürfnisse unserer Kunden sowie einem ganzheitlichen Ansatz aus Consulting, Technologie und Application Management arbeiten wir an E-Business-Projekten die begeistern</h2>
-                            <!-- <br><a class="scroll-link" href="#projects"></a> -->
                             </div>
 					</div>
 				</div>
@@ -323,9 +321,9 @@ Als Geschäftsführer und Data Scientist bei Commerce Experts verantwortet er da
 			</div>
 		</section>
 		<!-- End Sidebar -->
-		<section id="copyright">
-			© 2014</br>Commerce Experts UG (haftungsbeschränkt) i. Gr.
-		</section>
+		<div id="copyright">
+			© 2014<br>Commerce Experts UG (haftungsbeschränkt) i. Gr.
+		</div>
 	</div>
     <!-- End Wrapper for Content -->
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.8.1/jquery.min.js"></script>
