old google maps version

--- a/index.html
+++ b/index.html
@@ -267,7 +267,7 @@ Als Geschäftsführer und Data Scientist bei Commerce Experts verantwortet er da
 						<div class="lead">Wir freuen uns über Ihren Anruf oder eine Nachricht an uns.</div>
 						<div class="row">
 							<div class="span8">
-								<div id="googleMap" style="width:100%;height:380px;"></div>    
+								<iframe width="100%" height="380" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d2625.1117187073914!2d8.6625!3d48.85608!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47976dbdc1f10041%3A0x802c54e8d0183324!2sSchulerstra%C3%9Fe+2%2C+75180+Pforzheim!5e0!3m2!1sde!2sde!4v1407489427348"></iframe>    
 							</div>
 							<div class="span4 address">
 								<div class="contact-name">Commerce Experts UG (haftungsbeschränkt)</div>
