--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 	================================================== -->
 	<link rel="shortcut icon" href="img/favicon.ico">
 	
-    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyD1JmI0sQtdwUYM4CvpQYCFtiS3rHiTlbU&sensor=false"></script>
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyD1JmI0sQtdwUYM4CvpQYCFtiS3rHiTlbU&ampsensor=false"></script>
 
     <script>
     var myCenter=new google.maps.LatLng(48.85608,8.6625,17);
@@ -58,7 +58,7 @@
 		<div class="container">
 			<div class="row">
 				<div class="span4">
-					<a href="#home" class="logo"><img src="img/CXP_Logo_w.png" alt="commerce experts logo"></a>
+					<a href="#home" class="logo"><img src="img/CXP-Commerce-Experts-Logo.png" alt="commerce experts logo"></a>
 				</div>
 				<!-- Navigation -->
 				<nav id="topnav" class="span8">
@@ -92,7 +92,7 @@
 			<div class="container">
 				<div class="row">
 					<div class="span4">
-						<a href="#home" class="logo"><img src="img/CXP_Logo_w.png" alt="commerce-experts logo"></a>
+						<a href="#home" class="logo"><img src="img/Commerce-Experts-Logo.png" alt="commerce-experts"></a>
 					</div>
 					<div class="span8">
 						<ul id="fluid-nav" class="fluid-navigation visible-desktop">
@@ -122,7 +122,7 @@
 						
 						<div class="row slider-services">
 							<div class="span8">
-								<img src="img/customer-ecosystem.png" alt="commerce experts data driven commerce">
+								<img src="img/commerce-experts-ecosystem.png" alt="commerce experts data driven commerce ecosystem">
 							</div>
 							<div class="span4">
 								<!-- Start Services List -->
@@ -372,14 +372,13 @@ Als Geschäftsführer und Data Scientist bei Commerce Experts verantwortet er da
     <!-- Load Analytics
   	================================================== -->
     <script>
-  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+      (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+      (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+      m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+      })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
 
-  ga('create', 'UA-54571093-1', 'auto');
-  ga('send', 'pageview');
-
-</script>
+      ga('create', 'UA-54571093-1', 'auto');
+      ga('send', 'pageview');
+    </script>
 </body>
 </html>
