some further SEO improvements

--- a/index.html
+++ b/index.html
@@ -349,7 +349,7 @@ Als Geschäftsführer und Data Scientist bei Commerce Experts verantwortet er da
 		</section>
 		<!-- End Sidebar -->
 		<div id="copyright">
-			© 2014<br>Commerce Experts UG (haftungsbeschränkt) i. Gr.
+			© 2014<br>Commerce Experts UG (haftungsbeschränkt) i.G.
 		</div>
 	</div>
     <!-- End Wrapper for Content -->
