--- a/haftungsausschluss.html
+++ b/haftungsausschluss.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 	<meta charset="utf-8">
-	<title>Commerce Experts | Data driven Commerce</title>
+	<title>Commerce Experts | Haftungsausschluss</title>
 	<meta name="description" content="Die Commerce Experts UG mit Sitz in Pforzheim ist ein Technologieberatungs- und Softwarehaus, dass sich auf die Umsetzung komplexer Mulitchannel Projekte spezialisiert hat.">
 	<meta name="author" content="Commerce Experts UG (haftungsbeschränkt)">
     <meta name="keywords" content="Multichannel, Crosschannel, Omnichannel, E-Commerce, Data Driven Commerce, On-Site Search, Guided Selling, Personalization, Recommendation, Pforzheim"/>
@@ -34,11 +34,11 @@
 						<div class="title"><span class="color-text">Haftungsausschluss</span></div>
                         <div class="sub-caption"><h5>Haftungsausschluss</h5></div>
                         
-<p>Die Commerce Experts UG (haftungsbschränkt) i. Gr. übernimmt keine Garantie dafür, dass die auf dieser Website bereitgestellten Informationen vollständig, richtig und in jedem Falle aktuell sind. Dies gilt auch für alle Verbindungen (“Links”), die von dieser Website direkt oder indirekt verweisen. Die Commerce Experts UG (haftungsbschränkt) i. Gr. ist für den Inhalt einer Seite, die mit einem Link erreicht wird, nicht verantwortlich. Die Commerce Experts UG (haftungsbschränkt) i. Gr. behält sich das Recht vor, ohne vorherige Ankündigung Änderungen oder Ergänzungen der bereitgestellten Informationen vorzunehmen.</p>
+<p>Die Commerce Experts UG (haftungsbschränkt) i.G. übernimmt keine Garantie dafür, dass die auf dieser Website bereitgestellten Informationen vollständig, richtig und in jedem Falle aktuell sind. Dies gilt auch für alle Verbindungen (“Links”), die von dieser Website direkt oder indirekt verweisen. Die Commerce Experts UG (haftungsbschränkt) i.G. ist für den Inhalt einer Seite, die mit einem Link erreicht wird, nicht verantwortlich. Die Commerce Experts UG (haftungsbschränkt) i.G. behält sich das Recht vor, ohne vorherige Ankündigung Änderungen oder Ergänzungen der bereitgestellten Informationen vorzunehmen.</p>
 
-<p>Die Commerce Experts UG (haftungsbschränkt) i. Gr. begründet durch die Bereitstellung dieser Informationen kein Vertragsangebot über Auskünfte, Beratung oder ähnliche Vertragsbeziehungen. Jegliche Haftung für die Nutzung der Inhalte der Website oder die Richtigkeit der Inhalte oder die Erreichbarkeit der Website wird ausgeschlossen.</p>
+<p>Die Commerce Experts UG (haftungsbschränkt) i.G. begründet durch die Bereitstellung dieser Informationen kein Vertragsangebot über Auskünfte, Beratung oder ähnliche Vertragsbeziehungen. Jegliche Haftung für die Nutzung der Inhalte der Website oder die Richtigkeit der Inhalte oder die Erreichbarkeit der Website wird ausgeschlossen.</p>
 
-<p>Die Commerce Experts UG (haftungsbschränkt) i. Gr. haftet daher nicht für konkrete, mittelbare und unmittelbare Schäden oder Schäden, die durch fehlende Nutzungsmöglichkeiten, Datenverluste oder entgangene Gewinne entstehen können, die im Zusammenhang mit der Nutzung von Dokumenten oder Informationen entstehen, die auf dieser Website zugänglich sind.</p>
+<p>Die Commerce Experts UG (haftungsbschränkt) i.G. haftet daher nicht für konkrete, mittelbare und unmittelbare Schäden oder Schäden, die durch fehlende Nutzungsmöglichkeiten, Datenverluste oder entgangene Gewinne entstehen können, die im Zusammenhang mit der Nutzung von Dokumenten oder Informationen entstehen, die auf dieser Website zugänglich sind.</p>
 					</div>
 				</div>
 			</div>
@@ -76,7 +76,7 @@
 		</section>
 		<!-- End Sidebar -->
 		<section id="copyright">
-			© 2014</br>Commerce Experts UG (haftungsbeschränkt) i. Gr.
+			© 2014</br>Commerce Experts UG (haftungsbeschränkt) i.G.
 		</section>
 	
     <!-- End Wrapper for Content -->
