URL encoding fix

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 	================================================== -->
 	<link rel="shortcut icon" href="img/favicon.ico">
 	
-    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyD1JmI0sQtdwUYM4CvpQYCFtiS3rHiTlbU&ampsensor=false"></script>
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyD1JmI0sQtdwUYM4CvpQYCFtiS3rHiTlbU&amp;ampsensor=false"></script>
 
     <script>
     var myCenter=new google.maps.LatLng(48.85608,8.6625,17);
