added h1 and h2 for SEO

--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
 				<div class="span12">
 					<div id="slidecaption">
 						Ihre <span class="color-text">Experten</span> für den<span class="color-text"> digitalen Handel</span>
-						<div class="sub-caption">Wir ebnen Wege für unsere Kunden & Partner beim Einstieg, bei der Optimierung und während der Wachstumsphase im digitalen Handel.</div>
+						<div class="sub-caption"><h1>Wir ebnen Wege für unsere Kunden & Partner beim Einstieg, bei der Optimierung und während der Wachstumsphase im digitalen Handel.</h1></div>
 						<a href="#about" class="btn white scroll-link">Erfahren Sie mehr</a>
 					</div>
 				</div>
