some SEO adjustments

--- a/impressum.html
+++ b/impressum.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="utf-8">
 	<title>Commerce Experts | Impressum</title>
-	<meta name="description" content="Die Commerce Experts UG mit Sitz in Pforzheim ist ein Technologieberatungs- und Softwarehaus, dass sich auf die Umsetzung komplexer Mulitchannel Projekte spezialisiert hat.">
+	<meta name="description" content="Impressum der Commerce Experts UG.">
 	<meta name="author" content="Commerce Experts UG (haftungsbeschränkt)">
     <meta name="keywords" content="Multichannel, Crosschannel, Omnichannel, E-Commerce, Data Driven Commerce, On-Site Search, Guided Selling, Personalization, Recommendation, Pforzheim"/>
 	<meta name="HandheldFriendly" content="true"/>
