--- a/index.html
+++ b/index.html
@@ -3,10 +3,11 @@
 <head>
 	<meta charset="utf-8">
 	<title>Commerce Experts | Data driven Commerce</title>
-	<meta name="description" content="Die Commerce Experts UG mit Sitz in Pforzheim ist ein Technologieberatungs- und Softwarehaus, dass sich auf die Umsetzung komplexer Mulitchannel Projekte spezialisiert hat.">
+	<meta name="description" content="Die Commerce Experts UG mit Sitz in Pforzheim ist ein Technologieberatungs- und Softwarehaus, dass sich auf die Umsetzung komplexer datengetriebener Multichannel Projekte spezialisiert hat.">
 	<meta name="author" content="Commerce Experts UG (haftungsbeschränkt)">
     <meta name="keywords" content="Multichannel, Crosschannel, Omnichannel, E-Commerce, Data Driven Commerce, On-Site Search, Guided Selling, Personalization, Recommendation, Pforzheim"/>
 	<meta name="HandheldFriendly" content="true"/>
+    <meta name="robots" content="index, follow">
 	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1"/>
 	<link href='https://fonts.googleapis.com/css?family=Montserrat:400,700%7COpen+Sans:400,300,700' rel='stylesheet' type='text/css'/>	
 	<!-- Import CSS -->
