--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
 				<div class="row">
 					<div class="span12">
 						<div class="title"><span class="color-text">COMMERCE </span>EXPERTS</div>
-                        <div class="sub-caption"><h5>Wir stehen für qualitativ hochwertige Projekte mit hohem Investitionsschutz <br>für Ihren unternehmerischen Erfolg im digitalen Handel.</h5>
+                        <div class="sub-caption"><h5>Wir stehen für qualitativ hochwertige datengetriebene Projekte mit hohem Investitionsschutz <br>für Ihren unternehmerischen Erfolg im digitalen Handel.</h5>
                         <p>Ein wesentliches Merkmal unserer Projekte ist die zentrale & integrierte Erfassung von Datenströmen aus verschiedenen Quellen.<br> Erfolgreiche Projekte im digitalen Handel zeichnen sich durch stabile und performante Prozesse, kanalübergreifende Datenstrukturen und eine hervorragende User Experience aus. Grundlage bilden eine Vielzahl an Datenpunkten, die gebündelt und aufbereitet werden müssen, um die Optimierung der Kundenansprache sowie personalisierte Marketingmaßnahmen zu ermöglichen.<br> Für den erforderlichen Datenaustausch zwischen den Systemen entwickelt und supportet Commerce Experts mit seinem Datahub, Schnittstellen zu den führenden Systemen im Markt und schafft so nachhaltig und unabhängig einen nachweislichen Mehrwert für Kunden und Partner.</p>
                         </div><p></p>
 						
