--- a/haftungsausschluss.html
+++ b/haftungsausschluss.html
@@ -10,7 +10,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1"/>
 	<link href='https://fonts.googleapis.com/css?family=Montserrat:400,700%7COpen+Sans:400,300,700' rel='stylesheet' type='text/css'/>	
 	<!-- Import CSS -->
-	<link rel="stylesheet" href="css/base.css" />
+	<link rel="stylesheet" href="css/style.css.css" />
 	<!--[if lt IE 10]>
 		<link href= "css/ie.css" rel= "stylesheet" media= "all" />
 	<![endif]-->
