load css ressources by one

--- a/index.html
+++ b/index.html
@@ -11,7 +11,15 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1"/>
 	<link href='https://fonts.googleapis.com/css?family=Montserrat:400,700%7COpen+Sans:400,300,700' rel='stylesheet' type='text/css'/>	
 	<!-- Import CSS -->
-	<link rel="stylesheet" href="css/style.css" />
+	<link rel="stylesheet" href="css/normalize.css" />
+    <link rel="stylesheet" href="css/layout.css" />
+    <link rel="stylesheet" href="css/shortcodes.css" />
+    <link rel="stylesheet" href="css/grid.css" />
+    <link rel="stylesheet" href="css/isotope.css" />
+    <link rel="stylesheet" href="css/jquery.fancybox.css" />
+    <link rel="stylesheet" href="css/flexslider.css" />
+    <link rel="stylesheet" href="css/mediaqueries.css" />
+    
 	<!--[if lt IE 10]>
 		<link href= "css/ie.css" rel= "stylesheet" media= "all" />
 	<![endif]-->
